@@ -1217,6 +1217,8 @@ TESTS+=	tests/explain_+ctor.test \
 	tests/explain_ctor_i.test \
 	tests/explain_cvf_v.test \
 	tests/explain_dtor.test \
+	tests/explain_ec_typedef_i.test \
+	tests/explain_ec_using_i.test \
 	tests/explain_ecf_v.test \
 	tests/explain_efi-itself.test \
 	tests/explain_efi.test \
