@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain extern "C" typedef int Int @ 0
