@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain extern "C" using Int = int @ 0
