@@ -12,6 +12,9 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 9.7.1
 
+** Added `extern "C" using` support
+`extern "C" using` declarations are now supported.
+
 ** C++ `auto` help
 The help for pseudo-English now correctly includes `auto` as a storage class
 for C++98 and C++03.
